--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@afreecatv/extension": "^0.0.19",
+    "@heartreup/script-loader": "^0.0.4",
+    "clsx": "^2.1.0",
+    "luxon": "^3.4.4",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.71.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
